# Elm

./: .gitignore  Elm.cabal  README.md  elm-compiler.cabal  stack.yaml
bench/: CompilerBenchmarks.elm
bench/src/: Benchmark.elm  IfBench.elm  LargeDictionary.elm
bench/src/Native/: Benchmark.js
compiler/Elm/Haskelm/: BuildString.hs  Dependencies.hs  EToH.hs  HToE.hs  Json.hs  Quasi.hs  TH.hs  Test.hs  Test2.hs
compiler/Language/Elm/: BuildString.hs  TH.hs  Unstable.hs
compiler/Language/Elm/TH/: HToE.hs  Json.hs  Util.hs
compiler/Language/Elm/Unstable/: Syntax.hs
compiler/Parse/: Expression.hs
compiler/SourceSyntax/: Declaration.hs  Expression.hs  Literal.hs  Location.hs  Module.hs  Pattern.hs  Type.hs
compiler/src/: Compile.hs  examples_list.txt
compiler/src/Type/: PatternMatch.hs
examples/: elm.json
src/: Canonicalize.hs  Compile.hs  Optimize.hs
src/AST/: Declaration.hs  Module.hs  Pattern.hs  Traversals.hs  Variable.hs
src/AST/Expression/: Canonical.hs  General.hs  Optimized.hs
src/Canonicalize/: Declaration.hs  Environment.hs  Sort.hs  Variable.hs
src/Docs/: Centralize.hs
src/Elm/: Compiler.hs  Utils.hs
src/Elm/Compiler/: Module.hs
src/Generate/: JavaScript.hs
src/Generate/JavaScript/: Helpers.hs
src/Optimize/: Cases.hs  DeadCode.hs  Ident.hs  Substitute.hs  TailCalls.hs
src/Reporting/: Annotation.hs  Region.hs  Warning.hs
src/Reporting/Error/: Canonicalize.hs
src/Type/Constrain/: Expression.hs  Pattern.hs
tests/: Main.hs
tests/Tests/: TH.hs
tests/test-files/: test.hst
