name: Elm
version: 0.10.1
cabal-version: >=1.9
build-type: Custom
license: BSD3
license-file: LICENSE
copyright: Copyright: (c) 2011-2013 Evan Czaplicki
maintainer: info@elm-lang.org
homepage: http://elm-lang.org
synopsis: The Elm language module.
description: Elm aims to make client-side web-development more pleasant.
             It is a statically/strongly typed, functional reactive
             language to HTML, CSS, and JS. This package provides a
             library for Elm compilation in Haskell and a compiler
             executable.
             Modified version with QuasiQuoting and translation
category: Compiler, Language
author: Evan Czaplicki
data-files: elm-runtime.js interfaces.data docs.json
data-dir: data
extra-source-files: changelog.txt

source-repository head
    type: git
    location: git://github.com/evancz/Elm.git

library
    build-depends: aeson -any, base >=4.2 && <5, binary >=0.6.4.0,
                   blaze-html ==0.5.* || ==0.6.*, blaze-markup -any, bytestring -any,
                   cmdargs -any, containers >=0.3, directory -any, filepath -any,
                   indents -any, language-ecmascript >=0.15 && <1.0, mtl >=2,
                   pandoc >=1.10, parsec >=3.1.1, pretty -any, text -any,
                   transformers >=0.2, union-find -any, unordered-containers -any,
                   shakespeare -any, template-haskell -any
    exposed-modules: Elm.Internal.Dependencies
                     Elm.Internal.Documentation Elm.Internal.Name Elm.Internal.Paths
                     Elm.Internal.Utils Elm.Internal.Version Elm.Haskelm.Quasi
                     Elm.Haskelm.EToH Elm.Haskelm.Test Elm.Haskelm.Test2
    exposed: True
    buildable: True
    extensions: TemplateHaskell QuasiQuotes DeriveDataTypeable MultiWayIf
    hs-source-dirs: compiler
    other-modules: Elm.Haskelm.HToE SourceSyntax.Declaration
                   SourceSyntax.Expression SourceSyntax.Helpers SourceSyntax.Literal
                   SourceSyntax.Location SourceSyntax.Module SourceSyntax.Pattern
                   SourceSyntax.PrettyPrint SourceSyntax.Type Generate.JavaScript
                   Generate.Noscript Generate.Markdown Generate.Html Generate.Cases
                   Transform.Canonicalize Transform.Check Transform.SafeNames
                   Transform.SortDefinitions Transform.Substitute Transform.Optimize
                   Metadata.Prelude InterfaceSerialization Parse.Binop
                   Parse.Declaration Parse.Expression Parse.Helpers Parse.Literal
                   Parse.Module Parse.Parse Parse.Pattern Parse.Type Type.Alias
                   Type.Constrain.Declaration Type.Constrain.Expression
                   Type.Constrain.Literal Type.Constrain.Pattern Type.Environment
                   Type.ExtraChecks Type.Fragment Type.Inference Type.PrettyPrint
                   Type.Solve Type.State Type.Type Type.Unify Build.Dependencies
                   Build.File Build.Flags Build.Print Build.Source Build.Utils
                   Paths_Elm
    ghc-options: -ddump-splices

executable elm
    build-depends: aeson -any, base >=4.2 && <5, binary >=0.6.4.0,
                   blaze-html ==0.5.* || ==0.6.*, blaze-markup ==0.5.1.*,
                   bytestring -any, cmdargs -any, containers >=0.3, directory -any,
                   filepath -any, indents -any, language-ecmascript >=0.15 && <1.0,
                   mtl >=2, pandoc >=1.10, parsec >=3.1.1, pretty -any, text -any,
                   transformers >=0.2, union-find -any, unordered-containers -any,
                   template-haskell -any, shakespeare -any
    main-is: Compiler.hs
    buildable: True
    extensions: TemplateHaskell QuasiQuotes DeriveDataTypeable MultiWayIf
    hs-source-dirs: compiler
    other-modules: Elm.Haskelm.HToE SourceSyntax.Declaration
                   SourceSyntax.Expression SourceSyntax.Helpers SourceSyntax.Literal
                   SourceSyntax.Location SourceSyntax.Module SourceSyntax.Pattern
                   SourceSyntax.PrettyPrint SourceSyntax.Type Generate.JavaScript
                   Generate.Noscript Generate.Markdown Generate.Html Generate.Cases
                   Transform.Canonicalize Transform.Check Transform.SafeNames
                   Transform.SortDefinitions Transform.Substitute Transform.Optimize
                   Metadata.Prelude InterfaceSerialization Parse.Binop
                   Parse.Declaration Parse.Expression Parse.Helpers Parse.Literal
                   Parse.Module Parse.Parse Parse.Pattern Parse.Type Type.Alias
                   Type.Constrain.Declaration Type.Constrain.Expression
                   Type.Constrain.Literal Type.Constrain.Pattern Type.Environment
                   Type.ExtraChecks Type.Fragment Type.Inference Type.PrettyPrint
                   Type.Solve Type.State Type.Type Type.Unify Build.Dependencies
                   Build.File Build.Flags Build.Print Build.Source Build.Utils
                   Paths_Elm
    ghc-options: -ddump-splices

executable elm-doc
    build-depends: aeson -any, aeson-pretty -any, base >=4.2 && <5,
                   binary >=0.6.4.0, bytestring -any, cmdargs -any, containers >=0.3,
                   directory -any, filepath -any, indents -any, mtl >=2,
                   pandoc >=1.10, parsec >=3.1.1, pretty -any, text -any
    main-is: Docs.hs
    buildable: True
    extensions: TemplateHaskell QuasiQuotes DeriveDataTypeable MultiWayIf
    hs-source-dirs: compiler
    other-modules: Elm.Haskelm.HToE SourceSyntax.Declaration
                   SourceSyntax.Expression SourceSyntax.Helpers SourceSyntax.Literal
                   SourceSyntax.Location SourceSyntax.Module SourceSyntax.Pattern
                   SourceSyntax.PrettyPrint SourceSyntax.Type Parse.Binop
                   Parse.Declaration Parse.Expression Parse.Helpers Parse.Literal
                   Parse.Module Parse.Pattern Parse.Type

test-suite test-elm
    build-depends: base -any, directory -any, HTF -any
    type: exitcode-stdio-1.0
    main-is: Main.hs
    buildable: True
    hs-source-dirs: tests
